[gd_scene load_steps=5 format=3 uid="uid://dudwkygnnfoa"]

[ext_resource type="Script" path="res://scenes/settings.gd" id="1_72l7i"]
[ext_resource type="Texture2D" uid="uid://b5eqj1uvyc2am" path="res://sprites/brz.png" id="1_euu4e"]
[ext_resource type="Texture2D" uid="uid://dgejkkb3t6q2x" path="res://sprites/usa.png" id="2_toblu"]
[ext_resource type="Texture2D" uid="uid://bm3y807gmy2ip" path="res://sprites/spin.png" id="3_d0i4j"]

[node name="settings" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 256.0
offset_top = 64.0
offset_right = 832.0
offset_bottom = 576.0
script = ExtResource("1_72l7i")

[node name="Language4" type="Label" parent="."]
layout_mode = 2
offset_left = 64.0
offset_right = 512.0
offset_bottom = 45.0
theme_override_font_sizes/font_size = 48
text = "Settings"
horizontal_alignment = 1

[node name="SettingsBox" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 64.0
offset_right = 512.0
offset_bottom = 483.0
alignment = 1

[node name="Language" type="Label" parent="SettingsBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Language"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="SettingsBox"]
layout_mode = 2
alignment = 1

[node name="Brazilian" type="Button" parent="SettingsBox/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Brazilian"
icon = ExtResource("1_euu4e")

[node name="English" type="Button" parent="SettingsBox/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "English"
icon = ExtResource("2_toblu")

[node name="Spanish" type="Button" parent="SettingsBox/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Spanish"
icon = ExtResource("3_d0i4j")

[node name="Language2" type="Label" parent="SettingsBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Difficult"
horizontal_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="SettingsBox"]
layout_mode = 2
alignment = 1

[node name="Easy" type="Label" parent="SettingsBox/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Easy"

[node name="Difficult" type="HSlider" parent="SettingsBox/HBoxContainer2"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
step = 10.0
value = 50.0
tick_count = 11

[node name="Hard" type="Label" parent="SettingsBox/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Hard"

[node name="Language3" type="Label" parent="SettingsBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Volume"
horizontal_alignment = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="SettingsBox"]
layout_mode = 2
alignment = 1

[node name="Low" type="Label" parent="SettingsBox/HBoxContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Low"

[node name="Volume" type="HSlider" parent="SettingsBox/HBoxContainer3"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
step = 10.0
value = 50.0
tick_count = 11

[node name="Loud" type="Label" parent="SettingsBox/HBoxContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Loud"

[node name="Credits" type="Button" parent="SettingsBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Credits"

[node name="Return" type="Button" parent="SettingsBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Return"

[connection signal="value_changed" from="SettingsBox/HBoxContainer2/Difficult" to="." method="_on_difficult_value_changed"]
[connection signal="value_changed" from="SettingsBox/HBoxContainer3/Volume" to="." method="_on_volume_value_changed"]
[connection signal="pressed" from="SettingsBox/Return" to="." method="_on_return_pressed"]
